# libffui

./: CMakeLists.txt  README.md  meson.build
src/: ffui.cpp  ffui.hpp  main.c  main.cpp
subprojects/: rapidfuzz-cpp.wrap
